# windi-test

./: .gitignore  pyproject.toml
src/: settings.py
src/application/: message_bus.py  uow.py
src/application/exceptions/: __init__.py  base.py  exceptions.py
src/application/ports/: __init__.py  live_chat_service.py
src/application/repository/: __init__.py  chat_repository.py  container.py  group_repository.py  repository.py  user_repository.py
src/application/usecases/: action_live_chat.py  add_group_participant.py  add_message_to_chat.py  get_chat_history.py  mark_message_as_seen.py
src/domain/chat/: __init__.py  chat.py  events.py  exceptions.py
src/domain/group/: __init__.py  exceptions.py  group.py
src/domain/message/: __init__.py  event.py  message.py
src/domain/services/: __init__.py  message_service.py  read_service.py
src/domain/shared/: __init__.py  event.py  exceptions.py  message_seen_event.py  new_message_event.py
src/domain/user/: user.py
src/infrastructure/cache/: __init__.py  cache_manager.py  config.py  types.py
src/infrastructure/db/: base.py  models.py
tests/: conftest.py
tests/unit/application/: test_action_live_chat.py  test_add_group_participant.py  test_add_message_to_chat.py  test_get_chat_history.py  test_mark_message_as_seen.py  test_message_bus.py
tests/unit/domain/: tes_event_pull.py  test_chat.py  test_group.py  test_message.py  test_message_service.py  test_read_service.py
tests/utils/: helpers.py
tests/utils/fakes/: __init__.py  container.py  ports.py  repository.py  session.py  uow.py
